deploy-f5/ open cros config for eks